--- a/UserService/UserService.WebApi/UserService.WebApi.csproj
+++ b/UserService/UserService.WebApi/UserService.WebApi.csproj
@@ -6,6 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <InvariantGlobalization>true</InvariantGlobalization>
     <UserSecretsId>c12c5285-de62-4f58-851e-a14c42fce35c</UserSecretsId>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
